--- a/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/PrivateShareViewController.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/PrivateShareViewController.xib
@@ -9,13 +9,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PrivateShareViewController" customModule="Billo" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PrivateShareViewController" customModule="lifeBox_Business" customModuleProvider="target">
             <connections>
                 <outlet property="bottomView" destination="ui7-rz-0Ps" id="hgu-ma-RTh"/>
                 <outlet property="contentView" destination="fFh-DE-Z2K" id="zf9-Ht-Ri7"/>
                 <outlet property="scrollView" destination="kEE-p6-0hz" id="O1O-9e-Tih"/>
-                <outlet property="searchSuggestionsContainer" destination="2mQ-Dg-Efm" id="XCZ-XA-Ddt"/>
-                <outlet property="searchSuggestionsContainerBottomOffset" destination="mAk-tO-3Pu" id="ugQ-aJ-E2K"/>
                 <outlet property="shareButton" destination="r31-rU-1Pz" id="YVX-cZ-mPp"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -25,7 +23,7 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kEE-p6-0hz" customClass="DismissKeyboardScrollView" customModule="Billo" customModuleProvider="target">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kEE-p6-0hz" customClass="DismissKeyboardScrollView" customModule="lifeBox_Business" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="49" width="414" height="763"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="fFh-DE-Z2K">
@@ -39,14 +37,10 @@
                         <constraint firstAttribute="trailing" secondItem="fFh-DE-Z2K" secondAttribute="trailing" id="ZTe-Ca-aPw"/>
                     </constraints>
                 </scrollView>
-                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2mQ-Dg-Efm">
-                    <rect key="frame" x="0.0" y="116" width="414" height="662"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ui7-rz-0Ps">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ui7-rz-0Ps" userLabel="bottomView">
                     <rect key="frame" x="0.0" y="778" width="414" height="118"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r31-rU-1Pz" customClass="RoundedButton" customModule="Billo" customModuleProvider="target">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r31-rU-1Pz" customClass="RoundedButton" customModule="lifeBox_Business" customModuleProvider="target">
                             <rect key="frame" x="117" y="20" width="180" height="44"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="Bmy-hy-drH"/>
@@ -68,8 +62,6 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="2mQ-Dg-Efm" secondAttribute="trailing" id="ADc-im-Fxp"/>
-                <constraint firstItem="2mQ-Dg-Efm" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="72" id="BSe-jp-cqI"/>
                 <constraint firstItem="ui7-rz-0Ps" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="F5Y-cB-Q0t"/>
                 <constraint firstItem="ui7-rz-0Ps" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="bottom" constant="-84" id="Obk-jm-2Q1"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="kEE-p6-0hz" secondAttribute="trailing" id="TUk-Ov-bMj"/>
@@ -77,8 +69,6 @@
                 <constraint firstItem="kEE-p6-0hz" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="eTY-ha-tW3"/>
                 <constraint firstItem="kEE-p6-0hz" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="f6r-Lt-9Ox"/>
                 <constraint firstItem="ui7-rz-0Ps" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="jY5-oH-u7v"/>
-                <constraint firstItem="2mQ-Dg-Efm" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="jmW-4B-Sxk"/>
-                <constraint firstItem="ui7-rz-0Ps" firstAttribute="top" secondItem="2mQ-Dg-Efm" secondAttribute="bottom" id="mAk-tO-3Pu"/>
                 <constraint firstAttribute="bottom" secondItem="ui7-rz-0Ps" secondAttribute="bottom" id="qkD-CL-3n6"/>
                 <constraint firstItem="fFh-DE-Z2K" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="zoy-ry-Sko"/>
             </constraints>
