--- a/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/Views/Shared/PrivateShareSharedFilesViewController.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/Views/Shared/PrivateShareSharedFilesViewController.xib
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PrivateShareSharedFilesViewController" customModule="Billo" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PrivateShareSharedFilesViewController" customModule="lifeBox_Business" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="c4H-7I-uCm" id="0SW-6d-QDm"/>
                 <outlet property="collectionViewBarContainer" destination="tdo-YS-avN" id="lTq-HO-qxo"/>
@@ -22,19 +22,19 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="XZs-mc-aWP">
-                    <rect key="frame" x="0.0" y="44" width="414" height="53"/>
+                    <rect key="frame" x="0.0" y="44" width="414" height="0.0"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tdo-YS-avN">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="53"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="0.0"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="53" id="tY1-d7-HAb"/>
+                                <constraint firstAttribute="height" id="tY1-d7-HAb"/>
                             </constraints>
                         </view>
                     </subviews>
                 </stackView>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="c4H-7I-uCm">
-                    <rect key="frame" x="0.0" y="97" width="414" height="765"/>
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="KbB-cg-g9h">
                         <size key="itemSize" width="128" height="128"/>
@@ -50,8 +50,8 @@
                 <constraint firstItem="XZs-mc-aWP" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="0NP-2n-MJ8"/>
                 <constraint firstItem="XZs-mc-aWP" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="MUh-X6-XNs"/>
                 <constraint firstItem="c4H-7I-uCm" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Rr6-mH-9ER"/>
+                <constraint firstItem="c4H-7I-uCm" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="VYX-m9-2g2"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="c4H-7I-uCm" secondAttribute="bottom" id="ZB1-LM-lx5"/>
-                <constraint firstItem="c4H-7I-uCm" firstAttribute="top" secondItem="XZs-mc-aWP" secondAttribute="bottom" id="n9D-VM-NMl"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="c4H-7I-uCm" secondAttribute="trailing" id="sw8-4z-rRR"/>
                 <constraint firstItem="XZs-mc-aWP" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="uhW-TW-eqs"/>
             </constraints>
