--- a/Depo/LifeBox_Business/Presentation/UserStories/Start/TwoFactorAuthentication/Cell/TwoFactorAuthenticationCell.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Start/TwoFactorAuthentication/Cell/TwoFactorAuthenticationCell.xib
@@ -1,32 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TwoFactorAuthenticationCell" id="KGk-i7-Jjw" customClass="TwoFactorAuthenticationCell" customModule="lifebox" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TwoFactorAuthenticationCell" id="KGk-i7-Jjw" customClass="TwoFactorAuthenticationCell" customModule="lifeBox_Business" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="48"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="48"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To my phone number:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S3M-fd-xzc">
-                        <rect key="frame" x="16" y="15.5" width="107.5" height="13"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="11"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Sc-jY-VIV">
-                        <rect key="frame" x="275" y="11" width="22" height="22"/>
+                        <rect key="frame" x="16" y="13" width="22" height="22"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="8Sc-jY-VIV" secondAttribute="height" multiplier="1:1" id="Nb1-aT-c4e"/>
                             <constraint firstAttribute="height" constant="22" id="fow-jZ-qsG"/>
@@ -36,19 +28,40 @@
                             <action selector="selectedButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Hah-t7-MvN"/>
                         </connections>
                     </button>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="sVP-6r-7xJ">
+                        <rect key="frame" x="53" y="1.5" width="252" height="45"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s4V-G8-gMu">
+                                <rect key="frame" x="0.0" y="0.0" width="252" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gag-Em-d7p">
+                                <rect key="frame" x="0.0" y="24.5" width="252" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="8Sc-jY-VIV" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="2lO-ri-3na"/>
-                    <constraint firstItem="S3M-fd-xzc" firstAttribute="left" secondItem="H2p-sc-9uM" secondAttribute="leftMargin" id="9lt-4B-leb"/>
-                    <constraint firstAttribute="trailing" secondItem="8Sc-jY-VIV" secondAttribute="trailing" constant="23" id="Bt2-AI-HfD"/>
-                    <constraint firstItem="S3M-fd-xzc" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Jab-w4-FwI"/>
-                    <constraint firstItem="8Sc-jY-VIV" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="S3M-fd-xzc" secondAttribute="trailing" constant="8" id="v0d-Sb-WHk"/>
+                    <constraint firstItem="sVP-6r-7xJ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="70e-vi-9pJ"/>
+                    <constraint firstAttribute="trailing" secondItem="sVP-6r-7xJ" secondAttribute="trailing" constant="15" id="C0V-KU-uHN"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="sVP-6r-7xJ" secondAttribute="bottom" id="jsg-3e-bqp"/>
+                    <constraint firstItem="sVP-6r-7xJ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="top" id="kJF-Yt-r2n"/>
+                    <constraint firstItem="8Sc-jY-VIV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="kyT-Zk-91T"/>
+                    <constraint firstItem="sVP-6r-7xJ" firstAttribute="leading" secondItem="8Sc-jY-VIV" secondAttribute="trailing" constant="15" id="l4K-ag-DK3"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="receiveMethodLabel" destination="S3M-fd-xzc" id="cvi-QP-yPL"/>
+                <outlet property="methodLabel" destination="s4V-G8-gMu" id="wiO-T9-JOC"/>
                 <outlet property="selectButton" destination="8Sc-jY-VIV" id="Rgo-UL-8jL"/>
+                <outlet property="valueLabel" destination="Gag-Em-d7p" id="LAY-at-tWD"/>
             </connections>
             <point key="canvasLocation" x="137.59999999999999" y="119.64017991004499"/>
         </tableViewCell>
