--- a/Depo/LifeBox_Business/Presentation/SubViews/EmptyView/EmptyView.xib
+++ b/Depo/LifeBox_Business/Presentation/SubViews/EmptyView/EmptyView.xib
@@ -25,7 +25,7 @@
                     <rect key="frame" x="0.0" y="84" width="414" height="812"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lFy-cC-bXQ" userLabel="MidContainnerrView">
-                            <rect key="frame" x="0.0" y="364" width="414" height="0.0"/>
+                            <rect key="frame" x="0.0" y="406" width="414" height="0.0"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hidden_big" translatesAutoresizingMaskIntoConstraints="NO" id="VT1-hY-bSE">
                                     <rect key="frame" x="147.5" y="-200" width="119" height="80"/>
@@ -62,6 +62,7 @@
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
+                        <constraint firstItem="lFy-cC-bXQ" firstAttribute="centerY" secondItem="MR9-pD-zgi" secondAttribute="centerY" id="Aaz-Vf-INr"/>
                         <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="lFy-cC-bXQ" secondAttribute="bottom" id="NTB-TY-qFJ"/>
                         <constraint firstItem="lFy-cC-bXQ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="MR9-pD-zgi" secondAttribute="top" id="aIq-XT-DiR"/>
                         <constraint firstItem="lFy-cC-bXQ" firstAttribute="leading" secondItem="MR9-pD-zgi" secondAttribute="leading" id="ck9-Xp-dck"/>
@@ -76,7 +77,6 @@
                 <constraint firstItem="4sb-Sz-nLP" firstAttribute="top" secondItem="FKm-xa-1rL" secondAttribute="top" constant="20" id="7HX-mg-BJB"/>
                 <constraint firstItem="MR9-pD-zgi" firstAttribute="trailing" secondItem="FKm-xa-1rL" secondAttribute="trailing" id="Cnp-aD-PSP"/>
                 <constraint firstItem="4sb-Sz-nLP" firstAttribute="leading" secondItem="FKm-xa-1rL" secondAttribute="leading" constant="15" id="MM1-zK-PTE"/>
-                <constraint firstItem="lFy-cC-bXQ" firstAttribute="centerY" secondItem="oEM-yL-fcB" secondAttribute="centerY" id="hGz-me-Dzh"/>
                 <constraint firstItem="MR9-pD-zgi" firstAttribute="top" secondItem="4sb-Sz-nLP" secondAttribute="top" constant="20" id="hu7-ae-Xre"/>
                 <constraint firstItem="MR9-pD-zgi" firstAttribute="leading" secondItem="FKm-xa-1rL" secondAttribute="leading" id="yif-nL-tcp"/>
             </constraints>
