--- a/Depo/LifeBox_Business/Presentation/SubViews/EmptyView/EmptyView.xib
+++ b/Depo/LifeBox_Business/Presentation/SubViews/EmptyView/EmptyView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18092"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -15,58 +15,45 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4sb-Sz-nLP" userLabel="SearchHeader">
-                    <rect key="frame" x="15" y="64" width="42" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MR9-pD-zgi">
-                    <rect key="frame" x="0.0" y="84" width="414" height="812"/>
+                    <rect key="frame" x="0.0" y="64" width="414" height="832"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lFy-cC-bXQ" userLabel="MidContainnerrView">
-                            <rect key="frame" x="0.0" y="406" width="414" height="0.0"/>
-                            <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hidden_big" translatesAutoresizingMaskIntoConstraints="NO" id="VT1-hY-bSE">
-                                    <rect key="frame" x="147.5" y="-200" width="119" height="80"/>
-                                </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="edY-Gb-tLj" userLabel="title label">
-                                    <rect key="frame" x="186" y="-90" width="42" height="0.0"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" id="Ukh-ss-aGo"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qtr-NV-B1N">
-                                    <rect key="frame" x="30" y="-80" width="354" height="60"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                            </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4sb-Sz-nLP" userLabel="SearchHeader">
+                            <rect key="frame" x="15" y="0.0" width="42" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="edY-Gb-tLj" userLabel="title label">
+                            <rect key="frame" x="186" y="416" width="42" height="0.0"/>
                             <constraints>
-                                <constraint firstItem="Qtr-NV-B1N" firstAttribute="top" secondItem="edY-Gb-tLj" secondAttribute="bottom" constant="10" id="0J6-GR-0pd"/>
-                                <constraint firstItem="edY-Gb-tLj" firstAttribute="top" secondItem="VT1-hY-bSE" secondAttribute="bottom" constant="30" id="0zI-ma-Eh9"/>
-                                <constraint firstAttribute="trailing" secondItem="Qtr-NV-B1N" secondAttribute="trailing" constant="30" id="1dR-1l-9it"/>
-                                <constraint firstItem="VT1-hY-bSE" firstAttribute="top" secondItem="lFy-cC-bXQ" secondAttribute="top" priority="900" constant="-200" id="AKa-mS-lln"/>
-                                <constraint firstItem="Qtr-NV-B1N" firstAttribute="centerX" secondItem="lFy-cC-bXQ" secondAttribute="centerX" id="c0l-v2-cTc"/>
-                                <constraint firstItem="VT1-hY-bSE" firstAttribute="centerX" secondItem="lFy-cC-bXQ" secondAttribute="centerX" id="cUz-11-Sab"/>
-                                <constraint firstAttribute="bottom" secondItem="Qtr-NV-B1N" secondAttribute="bottom" constant="20" symbolic="YES" id="jQa-90-UEx"/>
-                                <constraint firstItem="Qtr-NV-B1N" firstAttribute="leading" secondItem="lFy-cC-bXQ" secondAttribute="leading" constant="30" id="kF5-1e-m9h"/>
-                                <constraint firstItem="edY-Gb-tLj" firstAttribute="centerX" secondItem="lFy-cC-bXQ" secondAttribute="centerX" id="nPD-bF-Lnp"/>
+                                <constraint firstAttribute="height" id="Ukh-ss-aGo"/>
                             </constraints>
-                        </view>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qtr-NV-B1N">
+                            <rect key="frame" x="30" y="426" width="354" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hidden_big" translatesAutoresizingMaskIntoConstraints="NO" id="VT1-hY-bSE">
+                            <rect key="frame" x="147.5" y="306" width="119" height="80"/>
+                        </imageView>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstItem="lFy-cC-bXQ" firstAttribute="centerY" secondItem="MR9-pD-zgi" secondAttribute="centerY" id="Aaz-Vf-INr"/>
-                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="lFy-cC-bXQ" secondAttribute="bottom" id="NTB-TY-qFJ"/>
-                        <constraint firstItem="lFy-cC-bXQ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="MR9-pD-zgi" secondAttribute="top" id="aIq-XT-DiR"/>
-                        <constraint firstItem="lFy-cC-bXQ" firstAttribute="leading" secondItem="MR9-pD-zgi" secondAttribute="leading" id="ck9-Xp-dck"/>
-                        <constraint firstAttribute="trailing" secondItem="lFy-cC-bXQ" secondAttribute="trailing" id="xe0-8O-qqg"/>
+                        <constraint firstItem="4sb-Sz-nLP" firstAttribute="top" secondItem="MR9-pD-zgi" secondAttribute="top" id="GI1-Lt-IAO"/>
+                        <constraint firstAttribute="trailing" secondItem="Qtr-NV-B1N" secondAttribute="trailing" constant="30" id="MPZ-mG-oD0"/>
+                        <constraint firstItem="Qtr-NV-B1N" firstAttribute="leading" secondItem="MR9-pD-zgi" secondAttribute="leading" constant="30" id="Nb1-71-Aqt"/>
+                        <constraint firstItem="edY-Gb-tLj" firstAttribute="centerX" secondItem="MR9-pD-zgi" secondAttribute="centerX" id="SAs-Da-9cH"/>
+                        <constraint firstItem="4sb-Sz-nLP" firstAttribute="leading" secondItem="MR9-pD-zgi" secondAttribute="leading" constant="15" id="SuD-BI-DNy"/>
+                        <constraint firstItem="edY-Gb-tLj" firstAttribute="top" secondItem="VT1-hY-bSE" secondAttribute="bottom" constant="30" id="V3Q-7w-GFv"/>
+                        <constraint firstItem="VT1-hY-bSE" firstAttribute="centerX" secondItem="MR9-pD-zgi" secondAttribute="centerX" id="fPo-qT-PIC"/>
+                        <constraint firstItem="Qtr-NV-B1N" firstAttribute="top" secondItem="edY-Gb-tLj" secondAttribute="bottom" constant="10" id="fX2-Nm-OGb"/>
+                        <constraint firstItem="edY-Gb-tLj" firstAttribute="centerY" secondItem="MR9-pD-zgi" secondAttribute="centerY" id="jXi-25-9Jn"/>
                     </constraints>
                 </view>
             </subviews>
@@ -74,10 +61,8 @@
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="MR9-pD-zgi" secondAttribute="bottom" id="5Vj-a6-T5E"/>
-                <constraint firstItem="4sb-Sz-nLP" firstAttribute="top" secondItem="FKm-xa-1rL" secondAttribute="top" constant="20" id="7HX-mg-BJB"/>
                 <constraint firstItem="MR9-pD-zgi" firstAttribute="trailing" secondItem="FKm-xa-1rL" secondAttribute="trailing" id="Cnp-aD-PSP"/>
-                <constraint firstItem="4sb-Sz-nLP" firstAttribute="leading" secondItem="FKm-xa-1rL" secondAttribute="leading" constant="15" id="MM1-zK-PTE"/>
-                <constraint firstItem="MR9-pD-zgi" firstAttribute="top" secondItem="4sb-Sz-nLP" secondAttribute="top" constant="20" id="hu7-ae-Xre"/>
+                <constraint firstItem="MR9-pD-zgi" firstAttribute="top" secondItem="FKm-xa-1rL" secondAttribute="top" constant="20" id="hu7-ae-Xre"/>
                 <constraint firstItem="MR9-pD-zgi" firstAttribute="leading" secondItem="FKm-xa-1rL" secondAttribute="leading" id="yif-nL-tcp"/>
             </constraints>
             <connections>
